@startuml

title __LOGIN's Class Diagram__\n

  package nl.han.dea.marijn.services.login {
    interface LoginService {
        {abstract} + doLogin()
        {abstract} + getUserName()
        {abstract} + getToken()
    }
  }
  

  package nl.han.dea.marijn.services.login {
    class LoginServiceREST {
        + doLogin()
        - generateAndSetToken()
        + getUserName()
        + getToken()
    }
  }
  

  LoginServiceREST -up-|> LoginService
  LoginServiceREST o-- User : user
  LoginServiceREST o-- TokenGenerator : generator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
